--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -9,11 +9,14 @@ jobs:
     runs-on: ubuntu-latest
   
     steps:
-      name: Checkout
-      uses: actions/checkout@v3
+      - name: Checkout
+        uses: actions/checkout@v3
 
-      name: Install & build
-      run: npm i && npm run build
+      - name: Install & build
+        run: npm i && npm run build
 
-      name: Deploy
-      uses: actions/deploy-pages/@v4
+      - name: Deploy
+        uses: JamesIves/github-pages-deploy-action@4.1.1
+        with:
+          branch: current-deploy
+          folder: dist
