--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -15,7 +15,7 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Install & build
-        run: npm i && npm run build
+        run: npm ci && npm run build
 
       - name: Deploy
         uses: JamesIves/github-pages-deploy-action@4.1.1
